added password reset/change endpoints. refactored other endpoints

--- a/backend/src/main/resources/static/htmlTemplates/PasswordResetTemplate.html
+++ b/backend/src/main/resources/static/htmlTemplates/PasswordResetTemplate.html
@@ -71,7 +71,7 @@ div[style*="margin: 16px 0;"] { margin: 0 !important; }
                                 <tr>
                                     <td align="center" valign="middle" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 36px; font-weight: 800; padding: 0px 20px 0px 0px;">
                                         <h1 style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 36px; font-weight: 800; font-size: 36px; font-weight: 800; margin: 0; color: #ffffff;">
-                                        Konfirmimi i Llogarisë</h1>
+                                        Ndryshim i Fjalëkalimit</h1>
                                     </td>
                                 </tr>
                             </table>
@@ -119,7 +119,7 @@ div[style*="margin: 16px 0;"] { margin: 0 !important; }
                             <tr>
                                 <td align="center" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding-top: 10px;">
                                     <p style="font-size: 16px; font-weight: 400; line-height: 24px; color: #777777;">
-                                        Kliko butonin për të verifikuar llogarinë në RedScooter.
+                                        Kliko butonin për të ndryshuar fjalëkalimin.
                                     </p>
                                 </td>
                             </tr>
@@ -127,12 +127,12 @@ div[style*="margin: 16px 0;"] { margin: 0 !important; }
                                 <td align="center" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding-top: 10px;">
                                     <form action="{{confirmationURL}}" method="GET">
                                         <button style="cursor: pointer; font-size: 18px; font-family: Open Sans, Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; border-radius: 5px; background-color: #ee6c4d ; padding: 15px 30px; border: 1px solid #ee6c4d; display: block;">
-                                            Konfirmo Llogarinë</button>
+                                            Ndrysho Fjalëkalimin</button>
                                         <input name="token" type="hidden" value="{{confirmationToken}}">
                                         <input name="username" type="hidden" value="{{username}}">
                                     </form>
                                     <p style="font-size: 16px; font-weight: 400; line-height: 24px; color: #777777;">
-                                        Konfirmo llogarinë duke klikuar linkun: {{confirmationURL}}
+                                        Ndrysho fjalëkalimin duke klikuar linkun: {{confirmationURL}}
                                     </p>
                                 </td>
                             </tr>
